# WORDDISPLAY

./: .gitignore  README.md  data_source.py  pyproject.toml  report_generator.py
output/: Enterprise_Report.xlsx  Final_Report.docx
